@@ -68,7 +68,7 @@ int esd_audio_open()
 #endif /* #if !defined(__powerpc__) */
 
     /* set the sound driver audio format for playback */
-#if defined(__powerpc__)
+#if defined(__powerpc__) || defined(__sparc__)
     value = test = ( (esd_audio_format & ESD_MASK_BITS) == ESD_BITS16 )
         ? /* 16 bit */ AFMT_S16_NE : /* 8 bit */ AFMT_U8;
 #else /* #if !defined(__powerpc__) */
